# shiori

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_parsing_speed.py
scripts/: bootstrap_unidic.py  download_jitendex.py  uninstall_unidic.py  utils.py
src/shiori/: __init__.py  ankiconnect.py  card_builder.py  cli.py  ingest.py  known_words.py  lookup.py  parse.py  paths.py  tui.py
src/shiori/anki_templates/: mappings.json
src/shiori/anki_templates/note_types/: Lapis.json
tests/: TODO  test_card_builder.py  test_epub_ingest.py  test_lookup.py  test_parser.py
